[package]
name = "hacka"
version = "0.1.0"
edition = "2024"

[dependencies]
[package]
name = "nft_rental"
version = "0.1.0"
authors = ["luiz"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std"
]

[lib]
name = "nft_rental"
path = "src/lib.rs"
crate-type = ["cdylib"]